@@ -73,6 +73,8 @@
     <File name="./Navigation/Structure.cs" subtype="Code" buildaction="Compile" />
     <File name="./Navigation/LanguageItemCommandHandler.cs" subtype="Code" buildaction="Compile" />
     <File name="./Navigation/StructureNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/Member.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/MemberNodeBuilder.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
