@@ -30,10 +30,8 @@
 //
 
 using System;
-using System.IO;
 
 using MonoDevelop.Projects;
-using MonoDevelop.Ide.Gui;
 
 namespace CBinding.Navigation
 {
