@@ -1,5 +1,16 @@
 2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 
 
+	* Navigation/Tag.cs, Navigation/StructureNodeBuilder.cs,
+	  Navigation/ClassNodeBuilder.cs, Navigation/MemberNodeBuilder.cs,
+	  Navigation/TagDatabaseManager.cs,
+	  Navigation/ProjectNavigationInformation.cs, Navigation/Member.cs,
+	  Makefile.am, CBinding.addin.xml, CBinding.mdp: Added support for
+	  members.
+	* Navigation/Function.cs, Navigation/Namespace.cs, Navigation/Class.cs:
+	  Removed some unused usings.
+
+2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 
+
 	* Navigation/Tag.cs, Navigation/Function.cs,
 	  Navigation/TagDatabaseManager.cs, Navigation/LanguageItem.cs:
 	  Separated the parse structure from the parser.
